
$Id: changes.txt,v 1.103 2006/09/05 13:26:24 vvd0 Exp $

MVDSV v0.25 build 2500 (2006.10.25) :-)
MVDSV v0.21 build 24?? (2006.09.??)
----
MVDSV v0.20.05-CVS build 24?? (2006.0?.??)
* disconnect <disconn3ct@users.sourceforge.net>
- Ported from QW262: new command admin - spy'ing on rcon usage
  Can be used only by connected player. When you enable `spy mode' and
  somebody use rcon - you will be noticed. Use rcon admin off to disable spy mode.
- ZQuake's cmodel.c instead of original sv_model.c
- bugfix: banned users can use master_rcon

* jhodge <jhodge@users.sourceforge.net>
- new cvar sv_allowlastscores
  0 - disallow connection less command lastscores
  1 - allow connection less command lastscores
  default: 1
- bugfix from 0.1727: possibility to run master_rcon commands with normal rcon

* VVD <vvd0@users.sourceforge.net>
- optimized detection of ktpro and added detection of ktpro versions from 1.50 to 1.57
- bugfix from 0.20: qwdtools made "choppy" mvd demos from qwd (disconnect, hello :-))
- improved build number calculation
- bugfix from 0.179: "99% downloaded" - sometimes after downloading client don't rename
  temporary file to real filename and don't hide download bar - show 99% (EXPERIMENTAL)
(Thanks to Renzo)
- bugfix from 0.1726: on *nix '-u <UID>' didn't set uid
(Thanks to mli)
- improved -u and -g (setuid/setgid) support

* qqshka <qqshka@users.sourceforge.net>
- for developers only: Tonik quote: Add ZQ_ITEMS2 extension - adds .items2 into the 9 highest
  bits of STAT_ITEMS sent to clients, a la NQ.  Allows for per-client sigil display in the
  status bar, unlike serverflags which is the same for everyone. Unlike NQ, we don't discard
  serverflags if the .items2 field is declared by progs.
  Supported both by QVM and QC.
- bugfix: u can use higher rate than sv_maxrate after some trix with downloading
- for developers: for QVM mods only, now you can check is particular infokey(...) "extension"